starting team section

--- a/index.html
+++ b/index.html
@@ -93,6 +93,7 @@
 
 					<div class="team-card">
 						<h2>Adam Noden</h2>
+						<h3>Designer/developer</h3>
 						<img src="" alt="Team photo">
 						
 					</div>
