--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" ng-app="app">
 	<head>
 		<meta charset="UTF-8">
-		<meta name="description" content="150 Characters giving a breif description of the website. Try to include keywords used on the page. ">
+		<meta name="description" content="">
 
 		<!-- smartphone settings -->
 		<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
