--- a/index.html
+++ b/index.html
@@ -51,10 +51,11 @@
 				<section class="section-1">
 					<h1>Hi, we're nts creative</h1>
 					<h2>We are a small, London-based team who design and develop things for the web.
-						<br />Full website coming at some point.
+						<br />Full website coming Late 2014.
 					</h2>
 					
 					<img class="svg-wwd" src="images/SVG/what-we-do.svg">
+					<img class="svg-wwd2" src="images/SVG/wwd-vert.svg">
 					<!-- <img class="svg-down" src="images/SVG/down-button.svg"> -->
 					
 				</section><!-- section-1 -->
