--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en">
 	<head>
 		<meta charset="UTF-8">
-		<meta name="description" content="">
+		<meta name="description" content="We are NTS Cretive. We deal with: web design, web development, hosting, consulting, training. Based in West London.">
 
 		<!-- smartphone settings -->
 		<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
