footer javascript and section sizing tweaks

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en">
 	<head>
 		<meta charset="UTF-8">
-		<meta name="description" content="We are NTS Cretive. We deal with: web design, web development, hosting, consulting, training. Based in West London.">
+		<meta name="description" content="We are NTS Creative. We deal with: web design, web development, hosting, consulting, training. Based in West London.">
 
 		<!-- smartphone settings -->
 		<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
@@ -42,7 +42,6 @@
 			<section class="section-1">
 				<h1>Hi, we're nts creative</h1>
 				<h2>We are a small, London-based team who design and develop things for the web.
-					<br />Full website coming Late 2014.
 				</h2>
 
 				<img class="svg-wwd" src="images/SVG/what-we-do.svg">
@@ -115,7 +114,7 @@
 
 					<div class="footer-info">
 
-						<p>&copy; NTS Creative Ltd 2014</p>
+						<p>&copy; NTS Creative Ltd <script type="text/javascript"> document.write(new Date().getFullYear());</script></p>
 						<div class="footer-divider"></div>
 						<p>NTS Creative Ltd is a registered company (No. 7974994) in England and Wales.</p>
 						<div class="footer-divider"></div>
